[package]
name = "stone-rank"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stone_rank_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.52.3"
reqwest = { version = "0.13.3", features = ["json", "form", "query"] }
dotenvy = "0.15.7"
url = "2.5.8"
tauri-plugin-store = "2"
tauri-plugin-oauth = "2"
bytes = "1.11.1"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
migration = { path = "migration" }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.40"
features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls"
]
